Revert "Troubleshooting: Just publish VERSION_TAG."
This reverts commit 28ccbf8c028bb3db728673c8b007edf07b726f34.

--- a/.github/workflows/docker-image-build-publish.yml
+++ b/.github/workflows/docker-image-build-publish.yml
@@ -73,6 +73,8 @@ jobs:
           push: true
           load: false
           tags: |
+            ${{ env.IMAGE_TAG }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             ${{ env.VERSION_TAG }}
           labels: ""
 
